compiler-core/src/parse/snapshots/rakun_core__parse__tests__missing_type_constructor_arguments_in_type_annotation_1.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 1583
expression: "pub fn main() -> Int() {}"
---
----- SOURCE CODE
pub fn main() -> Int() {}

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:1:21
  │
1 │ pub fn main() -> Int() {}
  │                     ^ I was not expecting this

Found `(`, expected one of: 
- An import, const, type, or function.
